--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.10.2",
-    "@swimlane/ngx-charts": "^20.1.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "d3": "^7.3.0",
+    "echarts": "^5.3.1",
+    "ngx-echarts": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -32,6 +34,8 @@
     "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/d3": "^7.1.0",
+    "@types/d3-selection": "^3.0.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
